@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19940627
+MANIFEST for ded, version t19940628
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
